cors resolved correctly